--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "shortpixel/shortpixel-web",
+  "name": "titzu/shortpixel-web",
   "description": "ShortPixel generic web interface using the PHP SDK. Read more at https://shortpixel.com/api",
   "keywords": [
     "shortpixel",
